# oppstar-mymahir-c-training

./: README.md  REFACTORING_PLAN.md
beamer-template/: beamercolorthemeoppstar.sty  beamerouterthemeoppstar.sty  beamerthemeoppstar.sty  customization-example.tex  example-presentation.tex
docs/: .gitignore  syllabus.tex
docs/assignments/: day1_assignment.tex  day2_assignment.tex  day3_assignment.tex  day4_assignment.tex  day5_assignment.tex  day6_assignment.tex
docs/forms/: budget_sheet.tex  certificate_template.tex  registration_form.tex
docs/guides/: setup_guide.tex  troubleshooting_guide.tex
docs/manual/: course_manual.tex
docs/slides/: day1_slides.tex  day2_slides.tex  day2_slides_backup.tex  day2_test.tex  day3_slides.tex  day4_slides.tex  day4_slides_backup.tex  day5_slides.tex  day6_slides.tex  pitch_deck.tex
docs/slides/beamer-template/: README.md  beamercolorthemeoppstar.sty  beamerfontthemeoppstar.sty  beamerinnerthemeoppstar.sty  beamerouterthemeoppstar.sty  create-placeholder-images.tex  customization-example.tex  example-presentation.tex
src/: README.md  simple_test
src/day1/: CMakeLists.txt  README.md  SOLUTIONS.md  exercise1_hello.c  exercise1_hello_validation.c  exercise2_voltage.c  exercise2_voltage_validator.c  exercise3_power.c  exercise3_power_calculator.c  exercise4_compilation_demo.sh  exercise4_compilation_flags.sh  test_voltage
src/day1/exercises/: hello  hello.c  voltage_validator.c
src/day1/solutions/: README.md
src/day2/: README.md  exercise1_register_monitor.c  exercise2_test_sequence.c  exercise3_gpio_simulator.c  exercise4_debug_practice.c  test_registers
src/day2/exercises/: register_monitor.c
src/day3/: README.md  exercise1_pointer_registers.c  exercise2_chip_structures.c  exercise3_bit_operations.c  exercise4_chip_monitor.c  exercise4_dynamic_register_map.c
src/day3/exercises/: memory_scanner.c
src/day4/: CMakeLists.txt  README.md  exercise1_validation_lib.c  exercise2_fpga_hal.c  exercise3_cross_compile.c  fpga_hal.c  fpga_hal.h  test_hal  validation_lib.c  validation_lib.h
src/day4/cmake/: riscv-toolchain.cmake
src/day5/: README.md  exercise1_advanced_gdb.c  exercise2_mmio_validation.c
src/day6/: CMakeLists.txt  README.md  capstone_validation_framework.c
src/tests/: run_all_tests.sh
